# TrackNetMirror

./: .gitignore  pyproject.toml
Code/TrackNet_One_Frame_Input/: LoadBatches.py  predict.py  predict_video.py  train.py
Code/TrackNet_One_Frame_Input/Models/: TrackNet.py
Code/TrackNet_Three_Frames_Input/: LoadBatches.py  predict.py  predict_video.py  train.py
Code/TrackNet_Three_Frames_Input/Models/: TrackNet.py
